# fabric

./: pyproject.toml
.obsidian/: workspace.json
installer/client/cli/myExtensions/: README.md  pdf4llm.py  pyproject.toml  tlen.py
installer/client/cli/myExtensions/patch/: patchInstructions.md  pymupdf_rag_modified.patch  pymupdf_rag_modified.py
patterns_custom/: deploy.sh
patterns_custom/j_improvise_prompt/: system.md
patterns_custom/j_summarize_lecture/: system.md
